--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "biigle/module",
-    "description": "A template for a new BIIGLE module.",
+    "name": "biigle/newsletter",
+    "description": "BIIGLE module to offer an email newsletter.",
     "keywords": ["biigle", "biigle-module"],
     "license": "GPL-3.0-only",
     "support": {
-      "source": "https://github.com/biigle/module",
-      "issues": "https://github.com/biigle/module/issues"
+      "source": "https://github.com/biigle/newsletter",
+      "issues": "https://github.com/biigle/newsletter/issues"
     },
     "homepage": "https://biigle.de",
     "authors": [
@@ -16,7 +16,7 @@
     ],
     "autoload": {
       "psr-4": {
-         "Biigle\\Modules\\Module\\": "src"
+         "Biigle\\Modules\\Newsletter\\": "src"
       }
     }
 }
