--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
       }
     ],
     "require": {
-        "msurguy/honeypot": "^1.0",
+        "msurguy/honeypot": "^1.0"
     },
     "autoload": {
       "psr-4": {
